--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,8 @@
 {
-    "cmake.configureOnOpen": false,
-    "editor.formatOnSave": true
+  "cmake.configureOnOpen": false,
+  "editor.formatOnSave": true,
+  "files.associations": {
+    "iostream": "cpp",
+    "array": "cpp"
+  }
 }
